stop play when displaying related on mobile

--- a/TellMeAStory/web-flow-sources/hear/style.css
+++ b/TellMeAStory/web-flow-sources/hear/style.css
@@ -331,6 +331,11 @@
         margin-right: 20px;
 
     }
+
+    #storiessection.displayRelated #sharedstoryfooter {
+        display: none;
+
+    }
 }
 
 
